# SimpleBrainfuck

./: .gitignore  BfCommands.cpp  BfCommands.h  BfInterpreter.cpp  BfInterpreter.h  BfParser.cpp  BfParser.h  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/bf/: Commands.cpp  Commands.h  Debugger.cpp  Debugger.h  Fitter.cpp  Fitter.h  Interpreter.cpp  Interpreter.h  Jit.cpp  Jit.h  Parser.cpp  Parser.h  Resrap.cpp  Resrap.h
src/sbf/: BasicMacro.cpp  BasicMacro.h  Compiler.cpp  Compiler.h  Macro.h  TccMacro.cpp  TccMacro.h
